--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="m-12">
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="/images/banner1.png" class="w-full" />
+              <img src="images/banner1.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
@@ -62,7 +62,7 @@
             </div> 
             
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="/images/banner2.png" class="w-full" />
+              <img src="images/banner2.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <a href="#slide3" class="btn btn-circle">❯</a>
@@ -76,7 +76,7 @@
 
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="/images/banner3.png" class="w-full" />
+              <img src="images/banner3.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <a href="#slide4" class="btn btn-circle">❯</a>
@@ -90,7 +90,7 @@
 
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="/images/banner4.png" class="w-full" />
+              <img src="images/banner4.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
@@ -169,7 +169,7 @@
                <!-- fruit2 -->
             <div class="card  bg-base-100 shadow-2xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                  <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h4>12.90$ - 18.85$</h4>
@@ -190,7 +190,7 @@
                <!-- fruit3 -->
             <div class="card  bg-base-100 shadow-2xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                  <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h4>12.90$ - 18.85$</h4>
@@ -211,7 +211,7 @@
                <!-- fruit4 -->
             <div class="card  bg-base-100 shadow-2xl">
                 <figure class="px-10 pt-10">
-                  <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                  <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h4>12.90$ - 18.85$</h4>
