--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="grid absolute md:top-[500px] md:pr-96 gap-12 max-sm:pl-14 md:grid-cols-4 md:w-[900px] h-2 top-0">
                         <!-- member1 -->
                       <div class="card card-compact ">
-                        <figure><img src="/images/member1.png" alt="Shoes" /></figure>
+                        <figure><img src="images/member1.png" alt="Shoes" /></figure>
                         <div class="">
                           <h2 class="text-xl font-bold">Safia Chowdhury!</h2>
                           <p>Fruits Expert</p>
@@ -253,7 +253,7 @@
                       </div>
                        <!-- member2 -->
                        <div class="card card-compact ">
-                        <figure><img src="/images/member2.png" alt="Shoes" /></figure>
+                        <figure><img src="images/member2.png" alt="Shoes" /></figure>
                         <div class="">
                           <h2 class="text-xl font-bold">Safia Chowdhury!</h2>
                           <p>Fruits Expert</p>
@@ -264,7 +264,7 @@
                       </div>
                        <!-- member3 -->
                        <div class="card card-compact ">
-                        <figure><img src="/images/member3.png" alt="Shoes" /></figure>
+                        <figure><img src="images/member3.png" alt="Shoes" /></figure>
                         <div class="">
                           <h2 class="text-lg font-bold">Rokib Hossainv!</h2>
                           <p>Fruits Expert</p>
@@ -275,7 +275,7 @@
                       </div>
                        <!-- member4 -->
                        <div class="card card-compact ">
-                        <figure><img src="/images/member4.png" alt="Shoes" /></figure>
+                        <figure><img src="images/member4.png" alt="Shoes" /></figure>
                         <div class="card-body ">
                           <h2 class="text-xl font-bold">Chaity!</h2>
                           <p>Fruits Expert</p>
