--- a/index.html
+++ b/index.html
@@ -292,16 +292,22 @@
         </section>
     </main>
 <br>
-    <footer class="footer footer-center p-10 bg-black text-primary-content">
-        <div>
+    <footer class="footer footer-center p-10  bg-black text-primary-content">
+        <div class="space-y-3">
             <div class="grid grid-cols-2">
                 <img class="pl-9" src="images/logo.png" alt="">
             <h1 class="text-xl pt-4 font-bold">Fruit Burst</h1>
             </div>
          
-          <p class="font-bold">
-            ACME Industries Ltd. <br/>Providing reliable tech since 1992
-          </p> 
+          <ul class="flex gap-3">
+            <li>Home</li>
+            <li>About</li>
+            <li>Shop</li>
+            <li>All Fruit</li>
+            <li>Support</li>
+            <li>My Acount</li>
+          </ul>
+            
           <p>Copyright © 2023 - All right reserved</p>
         </div> 
         <div>
