--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
             </div>
          
           <ul class="flex gap-3">
-            <li>Home</li>
-            <li>About</li>
-            <li>Shop</li>
-            <li>All Fruit</li>
-            <li>Support</li>
-            <li>My Acount</li>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="">All Fruit</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">My Acount</a></li>
           </ul>
             
           <p>Copyright © 2023 - All right reserved</p>
